Fix content flickering on top section of homepage for Google Chrome users

--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,6 @@
     width: 100%;
     height: auto;
     padding: 25vh 200px;
-    background-color: rgba(3, 3, 3, .4);
 }
 
 .welcome_details_container {
